--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<link rel="icon" href="{{asset('bundles/insurancecontent/images/favicon.ico')}}"/>
+<link rel="icon" href="{{asset('bundles/insurancecontent/images/favicon.png')}}"/>
 <link href="{{asset('bundles/insurancecontent/css/reset.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{asset('bundles/insurancecontent/css/jquery-ui.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{asset('bundles/insurancecontent/css/modals.css')}}" rel="stylesheet" type="text/css"/>
