--- a/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -44,7 +44,7 @@
         <div class="control_point">
             <input type="checkbox" class="styled" id="accept" />
             <label for="accept" class="check_label">Согласен с <a href="">пользовательским соглашением</a></label>
-            <div class="error_text_box_quest">Подтвердите Ваше согласие с пользовательским соглашением</div>
+            <div class="error_text_quest_reg"><span></span>Подтвердите Ваше согласие с пользовательским соглашением</div>
         </div>
         {{ form_widget(form._token) }}
         <div class="green_button register">Продолжить</div>
@@ -69,7 +69,7 @@ $('.green_button.register').on('click', function(){
     if ($(form).find('#fos_user_registration_form_firstname').val().length == 0) {
         $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_firstname').parents('.control_point').removeClass('success');
-        $(form).find('#fos_user_registration_form_firstname').nextAll('.error_text').text('Имя не должно быть пустым');
+        $(form).find('#fos_user_registration_form_firstname').nextAll('.error_text').text('Введите имя');
         errors.fos_user_registration_form_firstname = true;
     } else {
         $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('success');
@@ -79,7 +79,7 @@ $('.green_button.register').on('click', function(){
     if ($(form).find('#fos_user_registration_form_plainPassword_first').val().length == 0) {
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').removeClass('success');
-        $(form).find('#fos_user_registration_form_plainPassword_first').nextAll('.error_text').text('Пароль не должен быть пустым');
+        $(form).find('#fos_user_registration_form_plainPassword_first').nextAll('.error_text').text('Введите пароль');
         errors.fos_user_registration_form_plainPassword_first = true;
     } else if (
     $(form).find('#fos_user_registration_form_plainPassword_first').val() != $(form).find('#fos_user_registration_form_plainPassword_second').val()
