--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -207,7 +207,7 @@ jQuery(function(){
                     <div class="limit">
                         <div class="shadow"></div>
                         <h2>Рассчитайте самую минимальную стоимость для вашего полиса ОСАГО</h2>
-                        <a href=""><span></span>Узнать цену</a>
+                        <a href="{{path('step1')}}"><span></span>Узнать цену</a>
                     </div>
                 </div>
                 <!-- any question -->
