--- a/path/app/Resources/FOSUserBundle/views/Resetting/checkEmail.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Resetting/checkEmail.html.twig
@@ -1,3 +1,3 @@
 {% block fos_user_content %}
-<div class="error_login">{{ 'resetting.check_email'|trans({'%email%': email}, 'FOSUserBundle') }}</div>
+<div class="success_reset">{{ 'resetting.check_email'|trans({'%email%': email}, 'FOSUserBundle') }}</div>
 {% endblock %}
