delivery js fix

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_three.html.twig
@@ -237,14 +237,14 @@
 
     function checkForm(e) {
         var errors = {};
-        if ($('#deliveryRegion').val().length == 0) {
-            errors.deliveryRegion = true;
-        } else
-            errors.deliveryRegion = false;
-        if ($('#deliveryCity').val().length == 0) {
-            errors.deliveryCity = true;
-        } else
-            errors.deliveryCity = false;
+        //if ($('#deliveryRegion').val().length == 0) {
+           // errors.deliveryRegion = true;
+        //} else
+         //   errors.deliveryRegion = false;
+        //if ($('#deliveryCity').val().length == 0) {
+        //    errors.deliveryCity = true;
+        //} else
+        //    errors.deliveryCity = false;
         if ($('#deliveryAddress').val().length == 0) {
             errors.deliveryAddress = true;
         } else
