--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/savedCalculationNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/savedCalculationNotification.html.twig
@@ -1,12 +1,13 @@
-Здравствуйте!
+<p>Здравствуйте!</p>
 
-Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.
+<p>Прежде всего позвольте выразить Вам свою благодарность за оказанное доверие нашему сервису.</p>
 
-Вы сохранили расчет полиса ОСАГО на сайте {{siteDomain}}.
+<p>Вы сохранили расчет по страхованию на сайте <b>PolisMarket</b>.</p>
 
-Для того, чтобы продолжить оформление полиса, пожалуйста, перейдите по ссылке: http://{{siteDomain}}{{path('step1')}}
+<p>Для того, чтобы продолжить оформление полиса, Вы можете перейти по ссылке: http://{{siteDomain}}{{path('step1')}}</p>
 
-С уважением,
-{{siteName}},
-Email: {{contactEmail}}
-Тел.: {{contactPhone}}
+<p>С уважением,<br />
+{{siteName}},<br />
+Email: {{contactEmail}}<br />
+Тел.: {{contactPhone}}</p>
+
