last standing fixes

--- a/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -118,13 +118,29 @@ $('.green_button.register').on('click', function(){
         }).done(function(data){
             //On success we will get JSON object with message, on failure we must pull html to form container again and reinit Custom
             if (typeof data === 'object' && data.message == 'success') {
-                //Process form data
-                $.ajax('{{path('step1')}}', {
-                type: 'POST',
-                data: $('#calculator-form').serialize()
-                }).done(function(data){
-                if (data.message === 'success') window.location = '{{path('step2')}}';
-                });
+                if (window.saveCalculation == true) {
+                    $.ajax('{{path('save_calculation')}}', {
+                        type: 'POST',
+                        data: $('#calculator-form').serialize()
+                    }).done(function (data){
+                                if (data.message == 'success') {
+                                    $('.common_error').hide();
+                                    $('.error_login').hide();
+                                    //Show success window
+                                    $('#success_modal .inform_title').text('Ваш расчет сохранен!');
+                                    $('#success_modal .inform_text').text('При следующем посещении сайта, на странице калькулятора Вы увидите свой сохраненный расчет для полиса ОСАГО');
+                                    $('#success_modal').modal().open();
+                                }
+                            });
+                } else {
+                    //Process form data
+                    $.ajax('{{path('step1')}}', {
+                    type: 'POST',
+                    data: $('#calculator-form').serialize()
+                    }).done(function(data){
+                        if (data.message === 'success') window.location = '{{path('step2')}}';
+                    });
+                }
             } else {
                 $('#registration_modal').replaceWith(data);
                 $('#registration_modal').modal().open();
