--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/delayedOrderNotification.html.twig
@@ -5,7 +5,7 @@
 Вы оформили заказ полиса ОСАГО на сайте {{siteDomain}}.
 
 --------------------------
-Номер вашего заказа: {{order.id}}
+Номер вашего заказа: {{order.policy.value}}
 --------------------------
 
 <b>Детальная информация по заказу:</b>
