--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/payedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/payedOrderNotification.html.twig
@@ -5,7 +5,7 @@
 <p>Мы получили оплату за Ваш заказ на PolisMarket.</p>
 
 <p>--------------------------</p>
-<p>Номер вашего заказа: {{order.id}}</p>
+<p>Номер вашего заказа: {{order.policy.value}}</p>
 <p>--------------------------</p>
 
 <p><b>Детальная информация по заказу:</b></p>
