--- a/path/src/Insurance/ContentBundle/Resources/views/Notifications/unpayedOrderNotification.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Notifications/unpayedOrderNotification.html.twig
@@ -5,7 +5,7 @@
 <p>Вы оформили заказ на PolisMarket.</p>
 
 <p>--------------------------</p>
-Номер вашего заказа: {{order.id}}
+Номер вашего заказа: {{order.policy.value}}
 <p>--------------------------</p>
 
 <p><b>Детальная информация по заказу:</b></p>
