--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<link rel="icon" href="{{asset('bundles/insurancecontent/images/favicon.png')}}"/>
+<link rel="icon" href="{{asset('bundles/insurancecontent/images/favicon.ico')}}"/>
 <link href="{{asset('bundles/insurancecontent/css/reset.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{asset('bundles/insurancecontent/css/jquery-ui.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{asset('bundles/insurancecontent/css/modals.css')}}" rel="stylesheet" type="text/css"/>
@@ -67,7 +67,7 @@
         	<div class="limit">
             	<a href="{{path('insurance_content_homepage')}}" class="logo"></a>
                 <div class="center_part">
-				    <span class="over24h">Круглосуточно</span>
+				    <span class="over24h">Звоните сейчас</span>
                     <span class="phone_ico"></span>
                     <div class="phone_number"><span class="code">066</span>931 0606 <!-- <span class="hours24">24/7</span>--></div>
                     <div class="grey_button call_me call_link"><!-- <span></span>-->заказать звонок</div>
@@ -111,6 +111,7 @@
                                 <div class="shadow"></div>
                             </li>
                             <li><a href="">О нашем страховом партнере<span class="delimiter"></span></a></li>
+							<li><a href="{{path('faq')}}">Ответы на Ваши вопросы<span class="delimiter"></span></a></li>
 							</ul>
                     </li>
 					<div class="shadow"></div>
