--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.css
@@ -29,16 +29,13 @@ header {
    z-index: 3;
    top: -20px;
    font-family: 'arialblack', Helvetica, sans-serif;
-   font-size: 13px;
-   color: black;
-   line-height: 0px;
+   font-size: 15px;
    font-weight: 600;
    text-transform: uppercase;
-   letter-spacing:0.45em;
-   color: #f9cc4f;
+   letter-spacing:0.20em;
+   color: #8f8f8f;
    padding-left: 3px;
    opacity: 0;
-   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
    -webkit-transition: top 500ms ease, opacity 0.8s ease;
     -moz-transition: top 500ms ease, opacity 0.8s ease;
     -o-transition: top 500ms ease, opacity 0.8s ease;
@@ -138,8 +135,8 @@ header {
         background-repeat: no-repeat;
         background-color: transparent; }
       header .center_part .grey_button:hover {
-        border: 1px solid #818181;
-		color: #2c2a22;}
+        border: 1px solid #ffa600;
+		color: #ffa600;}
   header .personal_office {
     display: inline-block;
     float: right;
@@ -1127,24 +1124,138 @@ footer {
 /*--------------------------------------- TEXT --------------------------------------------- */
 /*------------------------------------------------------------------------------------------- */
 .text_content {
+  font-family: Arial;
   border-radius: 6px;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   -khtml-border-radius: 6px;
-  background-color: #f7f7f7;
+  background-color: #FAFAFA;
   border: 1px solid #d7d7d7;
-  -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
   padding: 20px!important; }
-  .text_content .title {
-    border-bottom: 1px solid #cbcbcb;
+
+.text_content .title {
+    border-bottom: 1px solid #E3E3E3;
+	box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 1.0);
     margin-bottom: 20px;
-    padding-bottom: 20px; }
-    .text_content .title h1 {
-      margin-bottom: 5px; }
-    .text_content .title h2, .text_content .title h3 {
-      margin-bottom: 0px; }
+    padding-bottom: 10px; 
+	color:#3F3F3F;
+}
+
+.text_content .title h1 {
+      margin-bottom: 5px;
+	  color:#3F3F3F;
+}
+
+.text_content .title h3 {
+      margin-bottom: 0px; 
+	  color:#3F3F3F;}
+
+.text_content .boxFaq {
+display:block;
+margin-bottom: 20px;
+margin-left:10px;
+}
+
+.text_content .boxFaq ul {
+	display:block;
+}
+
+
+.text_content .boxFaq ul li{
+	display:block;
+	list-style:none outside none;
+}
+
+
+	  
+.text_content .boxFaq p {
+	text-align: justify;
+	color: #3F3F3F;
+    background-color: white;
+	border: 2px solid #FFB120;
+    border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -khtml-border-radius: 5px;
+    padding:20px;
+    margin:20px 35px 40px 25px;
+    display: none;
+}
+
+.text_content .boxFaq p a{
+	font-size: 14px;
+	border-bottom: none;
+	font-weight:400;
+	margin:0;
+}
+
+.text_content .boxFaq h2 {
+	color: #3F3F3F;
+    font-style:normal;
+    margin-bottom:0px;
+    font-size: 16px;
+	font-family: Arial Bold, Helvetica, sans-serif;
+	cursor:pointer;
+}
+
+.text_content .boxFaq a {
+	font-family: Arial Bold, Helvetica, sans-serif;
+    font-size: 16px;
+    cursor:pointer;
+	font-weight: 600;
+	color: #ffa600;
+	border-bottom: 1px dashed #ffa600;
+	margin:0 5px 10px;
+	-webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+	transition:  all 300ms ease;
+}
+
+.text_content .boxFaq a:hover {
+	border-bottom: 0px dashed #ffa600;
+	color:#3F3F3F; 
+}
+
+.text_content .boxFaq a.active {
+	border-bottom: none;
+	color:#3F3F3F;
+}
+
+.text_content .boxFaq span.plus {
+    float:none;
+    width:16px;
+	height:15px;
+    position: relative;
+    top:-1px;
+    right:0px;
+    display: inline-block;
+    vertical-align: middle;
+	margin:0;
+	background-image: url(../images/sprite.png);
+    background-position: -343px -31px;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+.text_content .boxFaq span.minus {
+    float:none;
+    width:16px;
+	height:15px;
+    position: relative;
+    top:-1px;
+    right:0px;
+    display: inline-block;
+    vertical-align: middle;
+	margin:0;
+	background-image: url(../images/sprite.png);
+    background-position: -359px -31px;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+
 
 /*------------------------------------------------------------------------------------------- */
 /*-----------------------------------  MODAL GENERAL ---------------------------------------- */
