--- a/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/faq.html.twig
@@ -11,24 +11,24 @@
             </div>
             <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Я хочу оформить полис ОСАГО. Как это сделать на Вашем сайте?</a></h2>
-                    <p>Для этого Вам нужно перейти воспользоваться нашим <a href="{{path('step1')}}">калькулятором ОСАГО</a>, заполнить его параметрами автомобиля, а также настроить опции страхования. Справа Вы увидите свой расчет и сможете приступить к оформлению. Для этого Вам нужно нажать на кнопку "Оформить сейчас" и пройти простенькую регистрацию. Дальше Вам будет предложено ввести данные по автомобилю (номер кузова и гос. номер), а также Ваши личные данные как страхователя. Нажимая на "Завершить заказ", вы переходите на конечный этап оплаты и доставки. Вот и всё, осталось выбрать каким способом Вы предпочитаете оплатить и можете подтверждать заказ. После этого наш менеджер сразу свяжется с Вами для уточнения деталей по доставке.</p>
+                    <p>Для этого Вам нужно воспользоваться нашим <a href="{{path('step1')}}">калькулятором ОСАГО</a>, заполнить его параметрами автомобиля, а также настроить опции страхования. Справа Вы увидите свой расчет и сможете приступить к оформлению. Для этого Вам нужно нажать на кнопку "Оформить сейчас" и пройти простенькую регистрацию. Дальше Вам будет предложено ввести данные по автомобилю (номер кузова и гос. номер), а также Ваши личные данные как страхователя. Нажимая на "Завершить заказ", вы переходите на конечный этап оплаты и доставки. Вот и всё, осталось выбрать каким способом Вы предпочитаете оплатить и можете подтверждать заказ. После этого наш менеджер сразу свяжется с Вами для уточнения деталей по доставке.</p>
 					</div>
                 <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Сколько времени занимает оформление полиса?</a></h2>
                     <p>Весь процесс оформления полиса занимает не более 5-7 минут.</p>
 					</div>
 					<div class="boxFaq">
-            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Сколько для меня будет стоить полис ОСАГО и какую скидку я могу получить?</a></h2>
-                    <p>Стоимость полиса ОСАГО расчитывается по формуле, в зависимости от объема двигателя и места регистрации Вашего автомобиля. Более подробную информацию по ценообразованию Вы можете получить на сайте <a href="http://www.mtsbu.kiev.ua/ua/for_consumers/96536/96546/" target="_blank">МТСБУ</a>.</p>
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Сколько для меня будет стоить полис ОСАГО и какую скидку я смогу получить?</a></h2>
+                    <p>Стоимость полиса ОСАГО расчитывается по формуле, в зависимости от объема двигателя и места регистрации Вашего автомобиля. Более подробную информацию по ценообразованию Вы можете получить на сайте <a href="http://www.mtsbu.kiev.ua/ua/for_consumers/96536/96546/" target="_blank">МТСБУ</a>. Ваша скидка рассчитывается от возраста вашего автомобиля: новый автомобиль - 3%, 2012 года - 5%, 2011 года - 10%, 2010 года - 15%, 2009 года - 20%, 2008 года и старше - 25%.</p>
 					</div>
                     <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Какими способами я могу оплатить свой заказ?</a></h2>
-                    <p><b>Вы можете оплатить такими способами:</b><br/><br/>- Наличными или пластиковой картой нашему курьеру-консультанту, который привезёт Вам полис<br/>- Пластиковой картой прямо на сайте<br/>- Приват24<br/>- Терминалы <br/>- Webmoney
+                    <p><b>Вы можете оплатить такими способами:</b><br/><br/>- Наличными или пластиковой картой нашему курьеру-консультанту, который привезёт Вам полис<br/>- Пластиковой картой прямо на сайте<br/>- Приват24<br/>- Терминалы самообслуживания<br/>- Webmoney
 					</p>
                     </div>
 					<div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Какие документы мне нужны для оформления полиса ОСАГО?</a></h2>
-                    <p>Для оформления Вам понадобится паспорт или водительского удостоверение, а также идентификационный код.</p>
+                    <p>Для оформления Вам понадобится паспорт или водительское удостоверение, а также идентификационный код.</p>
 					</div>
 					<div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Когда я получу свои договора в оригинале?</a></h2>
@@ -36,11 +36,11 @@
             </div>
                     <div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Почему я должен покупать страховку у Вас, а не у страховой компании напрямую?</a></h2>
-                    <p>Благодаря нашему сервису Вам не нужно ехать в страховую компанию для заключения договора. Вы можете оформить свой полис не выходя из дома или офиса. Также у нас более низкие цены, потому что мыделимся с нашими клентами частью нашего комиссионого вознаграждения.</p>
+                    <p>Благодаря нашему сервису Вам не нужно ехать в страховую компанию для заключения договора. Вы можете оформить свой полис не выходя из дома или офиса. Также у нас более низкие цены, потому что мы делимся с нашими клентами частью нашего комиссионого вознаграждения.</p>
                     </div>
 					<div class="boxFaq">
-            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Могу ли я расчитать стоимость полиса, а оформить его позже?</a></h2>
-                    <p>Да. На странице с калькулятором есть функция - "Сохранить расчет". Вам будет предложено пройти простенькую регистрацию, и после этого Вы получите на указанный электронный адрес письмо со ссылкой на сохраненный расчет. Также на последней стадии, после заполнения всех данных у Вас будет возможность отложить свое решение, чтобы оплатить заказ позже.</p>
+            <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Могу ли я рассчитать стоимость полиса, а оформить его позже?</a></h2>
+                    <p>Да, можете. На странице с калькулятором есть функция - "Сохранить расчет". Вам будет предложено пройти простенькую регистрацию, и после этого Вы получите на указанный электронный адрес письмо со ссылкой на сохраненный расчет. Также на последней стадии, после заполнения всех данных у Вас будет возможность отложить свое решение, чтобы оплатить заказ позже.</p>
                     </div>
 					<div class="boxFaq">
             <h2><span class="plus"></span><span class="minus" style="display:none;"></span> <a>Я не хочу оставлять свои данные на сайте, как мне оформить полис?</a></h2>
